# i18n-hero

./: .gitignore  Cargo.toml  i18n-hero.toml
extensions/i18n-hero-vscode/: .gitignore  README.md  i18n-hero-vscode-0.0.1.vsix  package-lock.json  package.json
extensions/i18n-hero-vscode/src/: extension.ts  server.ts
i18n-hero-cli/: Cargo.toml
i18n-hero-cli/src/: lsp.rs  main.rs  project.rs
i18n-hero-cli/src/trans/: structure.rs
i18n-hero-cli/src/utils/: args.rs
src/: init.rs  main.rs  project.rs
src/completion/: completion.rs  completion_data.rs  completion_doc.rs  mod.rs
src/loaders/: mod.rs
src/logger/: macros.rs  mod.rs
src/lsp/: completion.rs  misc.rs  mod.rs  quote.rs
src/utils/: args.rs  mod.rs  project.rs  project_config.rs
