[package]
name = "i18n-hero"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower-lsp-server = "0.23.0"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
